--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "rm -rf node_modules/.vite dist || true",
+    "prebuild": "node -e \"const fs=require('fs');['node_modules/.vite','dist'].forEach(d=>{try{fs.rmSync(d,{recursive:true,force:true})}catch(e){}})\"",
     "build": "vite build --force",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
