--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,12 @@
   "installCommand": "npm install",
   "framework": "vite",
   "outputDirectory": "dist",
-  "cleanUrls": true
+  "cleanUrls": true,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
 
